--- a/AspPhoneBuying.csproj
+++ b/AspPhoneBuying.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Controllers\CardController.cs" />
     <Compile Include="Controllers\PhoneController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Filters\PhonesFilter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
